# rasterizer

./: .gitignore  CMakeLists.txt  README.md  makefile
include/: rasterizer.h
src/: main.cpp  rasterizer.cpp
